--- a/about.html
+++ b/about.html
@@ -24,6 +24,10 @@
 	    </nav> 
 	</header>
 	<body>
+		<!-- <div id="mePhotoContainer">
+			<img id="photoOfMe" src="./otherPhotos/student-wdi-0094.png" alt="connor">
+		</div>
+ -->
 		<div id="aboutTextBox">
 			<h2>WHO AM I?</h2>
 			<p>I'm Connor! I believe in bringing design to life with code, and building websites that are beautiful. I have a love for all things art, design, architecture, and, most importantly, code. Annoyances include: Comic Sans, people who carry umbrellas in the sun, cilantro, and poorly kerned type.</p>
@@ -31,15 +35,3 @@
 	</body>
 </html>
 
-		<!-- <img src="http://i.imgur.com/G5kSPlb.png?1" title="I designed this!" />
-		<div id="center">
-			<div class = "aboutBox" id="about1">
-			<img src="http://i.imgur.com/xh9N5Gb.png?1" title="I designed this!" /></a>
-			</div>
-			<div class = "aboutBox" id="about2">
-			<img src="http://i.imgur.com/nREklX2.png?2" title="I designed this!" /></a>
-			</div>
-			<div class = "aboutBox" id="about3">
-			<img src="http://i.imgur.com/9BhNPgc.png?1" title="I designed this!" />
-			</div>
-		</div> -->
