added stuff to contact and design

--- a/design.html
+++ b/design.html
@@ -25,6 +25,10 @@
 	      <a href="contact.html">Contact</a>
 	    </nav>   
 	</header>
+	<div id="designContainer">
+		<img src="http://i.imgur.com/e3L86Yd.png?1" title="I designed this!" />
+		<p>Under Contstruction</p>
+	</div>
 		<!-- <div id="thumbnailContainer">
 			<img src="./designPhotos/thumbnails/image1.jpg">
 			<img src="./designPhotos/thumbnails/image2.png">
