--- a/contact.html
+++ b/contact.html
@@ -25,5 +25,17 @@
 		      <a href="contact.html">Contact</a>
 		    </nav> 
 		</header>
+			<div id="colorBox">
+				<img src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!"/>
+				<div id="contactTextBox">
+					<h2>Say Hi!</h2>
+					<p>Or other things.</p>
+					<button><a href="mailto:cjr6734@yahoo.com">Email Me</a></button>
+				</div>
+				<div id="contactTextBox2">
+					<a href="https://github.com/connorrowland" target="_blank">Github</a>
+					<a href="https://www.linkedin.com/in/connorrowland" target="_blank">Linkedin</a>
+				</div>
+			</div>
 	</body>
 </html>
