--- a/contact.html
+++ b/contact.html
@@ -15,16 +15,16 @@
 		      <div></div>
 		    </div>
 			<h2>Contact Me</h2>
-		    <nav>
-		      <p>X</p>
-		      <a href="index.html">Home</a>
-		      <a href="about.html">About</a>
-		      <a href="webDev.html">Web Development</a>
-		      <a href="design.html">Design</a>
-		      <a href="./pdfs/ResumeAugust2015.pdf">Resume</a>
-		      <a href="contact.html">Contact</a>
-		    </nav> 
 		</header>
+		    <nav>
+		      <p id="xOut">X</p>
+		      <a href="index.html">Home</a><br><br>
+		      <a href="about.html">About</a><br><br>
+		      <a href="webDev.html">Web Development</a><br><br>
+		      <a href="design.html">Design</a><br><br>
+		      <a href="./pdfs/ResumeAugust2015.pdf">Resume</a><br><br>
+		      <a href="contact.html">Contact</a><br><br>
+		    </nav> 
 			<div id="colorBox">
 				<img src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!"/>
 				<div id="contactTextBox">
