added to design page

--- a/design.html
+++ b/design.html
@@ -27,7 +27,9 @@
 	</nav>    
 	<div id="designContainer">
 		<img src="http://i.imgur.com/e3L86Yd.png?1" title="I designed this!" />
-		<p>Under Contstruction</p>
+		<p id="largeDesignText">Under Contstruction</p>
+		<p id="smallDesignText">Until completion, please take a look at my Behance profile by following the link below for a few selected projects.</p>
+		<button><a href="https://www.behance.net/connorrowland" target="_blank">Link To Behance Profile</a></button>
 	</div>
 		<!-- <div id="thumbnailContainer">
 			<img src="./designPhotos/thumbnails/image1.jpg">
