added some seo shit and updated resume

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
 	      <a href="contact.html">Contact</a><br><br>
 	    </nav> 
 			<div id="colorBox">
-				<img src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!"/>
+				<img src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="envelope"/>
 				<div id="contactTextBox">
 					<h2>Say Hi!</h2>
 					<p>Or other things.</p>
