--- a/design.html
+++ b/design.html
@@ -26,7 +26,7 @@
       <a href="contact.html">Contact</a><br><br>
 	</nav>    
 	<div id="designContainer">
-		<img src="http://i.imgur.com/e3L86Yd.png?1" title="I designed this!" />
+		<img src="http://i.imgur.com/e3L86Yd.png?1" title="I designed this!" alt="Connor Rowland Design Paintbrush"/>
 		<p id="largeDesignText">Under Contstruction</p>
 		<p id="smallDesignText">Until completion, please take a look at my Behance profile by following the link below for a few selected projects.</p>
 		<button><a href="https://www.behance.net/connorrowland" target="_blank">Link To Behance Profile</a></button>
