--- a/index.html
+++ b/index.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Connor Rowland</title>
+	<!-- Meta Tags -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Web Developer and Graphic Design portfolio website.">
+	<meta name="author" content="Connor Rowland">
+	<title>Connor Rowland | Web Developer</title>
+	<!-- Scripts and Links -->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js">
 	</script>
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="website.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body id="indexBody">
 	<h1>Connor Rowland</h1>
 		<div id="cityAndText">
-			<img src="http://i.imgur.com/eg6YKkM.png?1" title="I designed this!" />
+			<img src="http://i.imgur.com/eg6YKkM.png?1" title="I designed this!" alt="Flat Cartoon New York"/>
 			<div id="textContainer">
 				<h2>Hello!</h2>
 				<p>I'm Connor, A Web Developer and Graphic Designer. Everything on this website&#8212from flat cartoons to web pages&#8212has been designed and coded by myself. Thanks for stopping by!</p>
@@ -21,23 +26,23 @@
 		</div>
 			<div id = "lowerMenu">
 				<div id = "about">
-					<a href="about.html"><img src="http://i.imgur.com/rXP99tb.png?1" title="I designed this!" /></a><br>
+					<a href="about.html"><img src="http://i.imgur.com/rXP99tb.png?1" title="I designed this!" alt = "Connor Rowland" /></a><br>
 					<a class = "textLink" href = "about.html">About Me</a>
 				</div>
 				<div id = "webDevelopment">				
-					<a href="webDev.html"><img src="http://i.imgur.com/uyKuTfn.png?1" title="I designed this!" /></a><br>
+					<a href="webDev.html"><img src="http://i.imgur.com/uyKuTfn.png?1" title="I designed this!" alt="Web Developer Computer"/></a><br>
 					<a class = "textLink" href = "about.html">Web Development</a>
 				</div>
 				<div id="design">
-					<a href="design.html"><img src="http://i.imgur.com/gvTKVby.png?2" title="I designed this!" /></a><br>
+					<a href="design.html"><img src="http://i.imgur.com/gvTKVby.png?2" title="I designed this!" alt="Flat Cartoon Pencil" /></a><br>
 					<a class = "textLink" href = "about.html">Design Portfolio</a>
 				</div>
 				<div id = "resume">
-					<a href="./pdfs/ResumeAugust2015.pdf"><img src="http://i.imgur.com/6KUlO8Z.png?1" title="I designed this!" /></a><br>
+					<a href="./pdfs/ResumeAugust2015.pdf"><img src="http://i.imgur.com/6KUlO8Z.png?1" title="I designed this!" alt="Connor Rowland Resume"/></a><br>
 					<a class = "textLink" href = "about.html">Resume</a>
 				</div>
 				<div id = "contact">
-					<a href="contact.html"><img src="http://i.imgur.com/8tUkAOH.png?1" title="I designed this!" /></a><br>
+					<a href="contact.html"><img src="http://i.imgur.com/8tUkAOH.png?1" title="I designed this!" alt="Typewriter"/></a><br>
 					<a class = "textLink" href = "about.html">Contact</a>
 				</div>
 			</div>
