--- a/webDev.html
+++ b/webDev.html
@@ -26,15 +26,15 @@
 	      <a href="contact.html">Contact</a><br><br>
 	    </nav> 
 		<div id="webDevBox1">
-			<img src="http://i.imgur.com/gSTs83U.png?1" title="I designed this!" />
+			<img src="http://i.imgur.com/gSTs83U.png?1" title="I designed this!" alt="Web Developer Stacked Type" />
 		</div>
 		<div id="webDevBox2">
-			<img src="http://mobbook.generalassemb.ly/ga_cog.png" title="Source: GeneralAssemb.ly">
+			<img src="http://mobbook.generalassemb.ly/ga_cog.png" title="Source: GeneralAssemb.ly" alt="General Assembly">
 			<p id="webDevText1">I spent twelve weeks at General Assembly, where I would work every day towards my goal of becoming a Full Stack Web Developer.</p>
 		</div>
 		<div id="webDevBox3">
 			<h2>Projects</h2>
-			<a href="https://letsmeethalfway.herokuapp.com/"><img src="http://i.imgur.com/lLtgzXf.png?1" title="source: imgur.com" /></a>
+			<a href="https://letsmeethalfway.herokuapp.com/"><img src="http://i.imgur.com/lLtgzXf.png?1" title="source: imgur.com" alt="Connor Project 1"/></a>
 			<div id="wDBoxTextContainer3">
 				<p>Let's Meet is a project I worked on along side a group of two others. We created a single-page application using Backbone.js that allows two individuals who are in different places to meet in the middle. Using the both the Yelp and Google Maps API, we provide users with suggestions of what to do in the area around that midpoint. My particular role for this project was to do the Front-End and Design work. I chose to utilize Google's Material Design techniques for this role, creating a simple and colorful application that is easy to use.</p>
 				<a class="codeButtons" href="https://letsmeethalfway.herokuapp.com/" target="_blank">Link to Site</a>
@@ -42,7 +42,7 @@
 			</div>
 		</div>
 		<div id="webDevBox4">
-			<img src="http://i.imgur.com/Ri7CoER.png?1" title="I designed this!" />
+			<img src="http://i.imgur.com/Ri7CoER.png?1" title="I designed this!" alt="iPad and iPhone cartoon"/>
 			<div id="wDBoxTextContainer4">
 				<p>I believe in making websites that are simple and easy to use on devices of varied sizes and shapes. Let's Meet was my first project where I employed responsive design techniques to meet the demands of  mobile devices.</p>
 			</div>
