--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
 		</script>
 		<script type="text/javascript" src="website.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="shortcut icon" href="./otherPhotos/favicon1.ico"/>
 	</head>
 	<header>
 		<div id="hamburgerIcon">
