--- a/webDev.html
+++ b/webDev.html
@@ -6,6 +6,7 @@
 		</script>
 		<script type="text/javascript" src="website.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="shortcut icon" href="./otherPhotos/favicon1.ico"/>
 	</head>
 	<body>
 		<header>
