--- a/design.html
+++ b/design.html
@@ -26,20 +26,16 @@
       <a href="./pdfs/ResumeAugust2015.pdf">Resume</a><br><br>
       <a href="contact.html">Contact</a><br><br>
 	</nav>    
-	<div id="designContainer">
-		<img src="http://i.imgur.com/e3L86Yd.png?1" title="I designed this!" alt="Connor Rowland Design Paintbrush"/>
-		<p id="largeDesignText">Under Contstruction</p>
-		<p id="smallDesignText">Until completion, please take a look at my Behance profile by following the link below for a few selected projects.</p>
+	<div id="designBox1">
+		<img src="http://i.imgur.com/LMnAdaL.png?1" title="source: imgur.com" />
+		<p id="largeDesignText">Design, I love you.</p>
+	</div>
+	<div id="designBox2">
+		<p>I began designing once I got to college, when I discovered how incredible of a creative outlet it is. As I became more immersed in design, I realized how practical it would be to integrate with Web Development. Today, I am integrating design techinques to inform the various directions I take in Web Development, creating presentable, easy to use applications.</p>	
+	</div>
+	<div id="designBox3">
+		<p>Below is a link to my Behance profile, where you will find all of the design work I have done for either school projects, freelance work, or fun. Go take a look!</p>
 		<button><a href="https://www.behance.net/connorrowland" target="_blank">Link To Behance Profile</a></button>
 	</div>
-		<!-- <div id="thumbnailContainer">
-			<img src="./designPhotos/thumbnails/image1.jpg">
-			<img src="./designPhotos/thumbnails/image2.png">
-			<img src="./designPhotos/thumbnails/image3.png">
-			<img src="./designPhotos/thumbnails/image4.png">
-			<img src="./designPhotos/thumbnails/image6.png">
-			<img src="./designPhotos/thumbnails/image7.png">
-			<img src="./designPhotos/thumbnails/image11.png">
-		</div> -->
 	</body>
 </html>
