--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<a class = "textLink" href = "about.html">Design Portfolio</a>
 				</div>
 				<div id = "resume">
-					<a href="./pdfs/ResumeAugust2015.pdf"><img src="http://i.imgur.com/6KUlO8Z.png?1" title="I designed this!" alt="Connor Rowland Resume"/></a><br>
+					<a href="./pdfs/ResumeSeptember2015.pdf"><img src="http://i.imgur.com/6KUlO8Z.png?1" title="I designed this!" alt="Connor Rowland Resume"/></a><br>
 					<a class = "textLink" href = "about.html">Resume</a>
 				</div>
 				<div id = "contact">
