--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				</div>
 				<div id="design">
 					<a href="design.html"><img src="http://i.imgur.com/gvTKVby.png?2" title="I designed this!" alt="Flat Cartoon Pencil" /></a><br>
-					<a class = "textLink" href = "about.html">Design Portfolio</a>
+					<a class = "textLink" href = "about.html">Design</a>
 				</div>
 				<div id = "resume">
 					<a href="./pdfs/ResumeSeptember2015.pdf"><img src="http://i.imgur.com/6KUlO8Z.png?1" title="I designed this!" alt="Connor Rowland Resume"/></a><br>
