fixed href for resume

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
 	      <a href="about.html">About</a><br><br>
 	      <a href="webDev.html">Web Development</a><br><br>
 	      <a href="design.html">Design</a><br><br>
-	      <a href="./pdfs/ResumeAugust2015.pdf">Resume</a><br><br>
+	      <a href="./pdfs/resume09292015.pdf">Resume</a><br><br>
 	      <a href="contact.html">Contact</a><br><br>
 		</nav> 
 	<body>
