media query fix and webdev update

--- a/design.html
+++ b/design.html
@@ -41,10 +41,10 @@
 		<p id="largeDesignText">Design, I love you.</p>
 	</div>
 	<div id="designBox2">
-		<p>I began designing once I got to college, when I discovered how incredible of a creative outlet it is. As I became more immersed in design, I realized how practical it would be to integrate with Web Development. Today, I am integrating design techinques to inform the various directions I take in Web Development, creating presentable, easy to use applications.</p>	
+		<p class="designText">I began designing once I got to college, when I discovered how incredible of a creative outlet it is. As I became more immersed in design, I realized how practical it would be to integrate with Web Development. Today, I am integrating design techinques to inform the various directions I take in Web Development, creating presentable, easy to use applications.</p>	
 	</div>
 	<div id="designBox3">
-		<p>Below is a link to my Behance profile, where you will find all of the design work I have done for either school projects, freelance work, or fun. Go take a look!</p>
+		<p class="designText">Below is a link to my Behance profile, where you will find all of the design work I have done for either school projects, freelance work, or fun. Go take a look!</p>
 		<button><a href="https://www.behance.net/connorrowland" target="_blank">Link To Behance Profile</a></button>
 	</div>
 	</body>
