--- a/webDev.html
+++ b/webDev.html
@@ -35,20 +35,30 @@
 	      <a href="./pdfs/resume09292015.pdf">Resume</a><br><br>
 	      <a href="contact.html">Contact</a><br><br>
 	    </nav> 
-		<div id="webDevBox1">
+<!-- 		<div id="webDevBox1">
 			<img src="http://i.imgur.com/gSTs83U.png?1" title="I designed this!" alt="Web Developer Stacked Type" />
 		</div>
 		<div id="webDevBox2">
 			<img src="http://mobbook.generalassemb.ly/ga_cog.png" title="Source: GeneralAssemb.ly" alt="General Assembly">
 			<p id="webDevText1">I spent twelve weeks at General Assembly, where I would work every day towards my goal of becoming a Full Stack Web Developer.</p>
-		</div>
+		</div> -->
 		<div id="webDevBox3">
 			<h2>Projects</h2>
-			<a href="https://letsmeethalfway.herokuapp.com/"><img src="http://i.imgur.com/lLtgzXf.png?1" title="source: imgur.com" alt="Connor Project 1"/></a>
+			<div id="horizontalLine"></div>
+			<h4 class="projectTitle">Let's Meet</h4>
+			<a href="https://letsmeethalfway.herokuapp.com/"><img src="./otherPhotos/proj1icon.png" title="source: imgur.com" alt="Connor Project 1"/></a>
 			<div id="wDBoxTextContainer3">
 				<p>Let's Meet is a project I worked on along side a group of two others. We created a single-page application using Backbone.js that allows two individuals who are in different places to meet in the middle. Using the both the Yelp and Google Maps API, we provide users with suggestions of what to do in the area around that midpoint. My particular role for this project was to do the Front-End and Design work. I chose to utilize Google's Material Design techniques for this role, creating a simple and colorful application that is easy to use.</p>
 				<a class="codeButtons" href="https://letsmeethalfway.herokuapp.com/" target="_blank">Link to Site</a>
 				<a class="codeButtons" href="https://github.com/naina726/letsMeetUp" target="_blank">See the Code</a>
+			</div>
+		</div>
+		<div id="webDevBox3">
+			<h4 class="projectTitle">Ellevest</h4>
+			<a href="https://ellevest.com/"><img src="./otherPhotos/proj2icon.png" title="source: imgur.com" alt="Connor Project 2"/></a>
+			<div id="wDBoxTextContainer3">
+				<p>Ellevest is an investing platform designed for women. I had the opportunity to do freelance work for Ellevest, creating page routes for their beta release sign up page. I also used React.Js to dynamically render helper text if a user inputs an erroneous entry, in addition to making a drop-down menu selection menu.</p>
+				<a class="codeButtons" href="https://Ellevest.com/" target="_blank">Link to Site</a>
 			</div>
 		</div>
 		<div id="webDevBox4">
