--- a/webDev.html
+++ b/webDev.html
@@ -55,10 +55,10 @@
 		</div>
 		<div id="webDevBox3">
 			<h4 class="projectTitle">Ellevest</h4>
-			<a href="https://ellevest.com/"><img src="./otherPhotos/proj2icon.png" title="source: imgur.com" alt="Connor Project 2"/></a>
+			<a href="https://www.ellevest.com/" target="_blank"><img src="./otherPhotos/proj2icon.png" title="source: imgur.com" alt="Connor Project 2"/></a>
 			<div id="wDBoxTextContainer3">
 				<p>Ellevest is an investing platform designed for women. I had the opportunity to do freelance work for Ellevest, creating page routes for their beta release sign up page. I also used React.Js to dynamically render helper text if a user inputs an erroneous entry, in addition to making a drop-down menu selection menu.</p>
-				<a class="codeButtons" href="https://Ellevest.com/" target="_blank">Link to Site</a>
+				<a class="codeButtons" href="https://www.ellevest.com/" target="_blank">Link to Site</a>
 			</div>
 		</div>
 		<div id="webDevBox4">
