new websitegit status

--- a/letsmeet.html
+++ b/letsmeet.html
@@ -31,27 +31,18 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a href="contact.html">Contact</a>
 	</nav>
-	<div class="lander_container">
-		<div class="text_and_photo_container">
-			<img id="icon_of_me"src="http://i.imgur.com/dVg6YIY.png?1" alt="icon of me.">
-			<div class="lander_text">
-				<h1 id="lander_greeting1">HELLO!</h1>
-				<h2 id="lander_greeting2">I'm Connor, a Web Developer and Graphic Designer</h2>
-			</div>	
-		</div>
+	<div id="porfolio_container">
+		<h1>Let's Meet!</h1>
+		<h2 id="project_description_text">In the Summer of 2015, me and two others created Let's Meet, an application for finding a central meeting place between two locations. We constructed Let's meet using Backbone.Js, Ruby on Rails, JQuery, Handlebars, and the API of both Yelp and Google Maps.<br><br><a id="project_link"href="https://letsmeethalfway.herokuapp.com/">Link To Site</a></h2>
+
+		<a href="https://letsmeethalfway.herokuapp.com/"><img class="larger_project_image" src="imgs/Letsmeet1.png" alt="Let's Meet Screenshot" /></a>
+		<a href="https://letsmeethalfway.herokuapp.com/"><img class="larger_project_image" src="imgs/Letsmeet2.png" alt="Let's Meet Screenshot" /></a>
+		<a href="https://letsmeethalfway.herokuapp.com/"><img class="larger_project_image" src="imgs/Letsmeet3.png" alt="Let's Meet Screenshot" /></a>
+		<a href="https://letsmeethalfway.herokuapp.com/"><img class="larger_project_image" src="imgs/Letsmeet4.png" alt="Let's Meet Screenshot" /></a>
+
 	</div>
-	<div class="second_lander_section">
-		<p id="second_lander_paragraph">I love building applications and taking part in work where I can blend meaningful design with well-written code. I also love dogs. I don’t love cilantro. Or comic sans. Thanks for stopping by!</p>
-	</div>
-	<div class="third_lander_section">
-		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I designed this!" alt="Flat Cartoon of New York"/>
-		<p>I also love making cartoons</p>
-		<img src="http://i.imgur.com/L18lNqk.png?1" title="I designed this!" alt="Flat cartoon of tools">
-		<h3 id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens just a bit less, as I integrate design and code to showcase an idea to its fullest ability.</h3>
-		<div class="horizontal_divider_line"></div>
-		<p id="closing_landing_statment">Take a look throughout my site to discover more about my work.</p>
-		<div class="horizontal_divider_line"></div>
-	</div>
+
+
 	<footer>
 		<nav id="footer_nav_bar">
 			<a href="index.html">Home</a>
