--- a/portfolio.html
+++ b/portfolio.html
@@ -31,27 +31,18 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a href="contact.html">Contact</a>
 	</nav>
-	<div class="lander_container">
-		<div class="text_and_photo_container">
-			<img id="icon_of_me"src="http://i.imgur.com/dVg6YIY.png?1" alt="icon of me.">
-			<div class="lander_text">
-				<h1 id="lander_greeting1">HELLO!</h1>
-				<h2 id="lander_greeting2">I'm Connor, a Web Developer and Graphic Designer</h2>
-			</div>	
+	<div id="porfolio_container">
+		<h2>Development Work:</h2>
+		<div class="preview_image_container">
+			<a href="ellevest.html"><img class="preview_image" src="imgs/Ellevest1.png" alt="ellevest" /></a>
+			<a href="letsmeet.html"><img class="preview_image" src="imgs/Letsmeet1.png" alt="ellevest" /></a>
+		</div>
+		<!-- <h2>Design Work:</h2>
+		<div class="preview_image_container">
+			<img class="preview_image" src="imgs/ellevest1.jpg" alt="ellevest" /> -->
 		</div>
 	</div>
-	<div class="second_lander_section">
-		<p id="second_lander_paragraph">I love building applications and taking part in work where I can blend meaningful design with well-written code. I also love dogs. I don’t love cilantro. Or comic sans. Thanks for stopping by!</p>
-	</div>
-	<div class="third_lander_section">
-		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I designed this!" alt="Flat Cartoon of New York"/>
-		<p>I also love making cartoons</p>
-		<img src="http://i.imgur.com/L18lNqk.png?1" title="I designed this!" alt="Flat cartoon of tools">
-		<h3 id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens just a bit less, as I integrate design and code to showcase an idea to its fullest ability.</h3>
-		<div class="horizontal_divider_line"></div>
-		<p id="closing_landing_statment">Take a look throughout my site to discover more about my work.</p>
-		<div class="horizontal_divider_line"></div>
-	</div>
+
 	<footer>
 		<nav id="footer_nav_bar">
 			<a href="index.html">Home</a>
