--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Contact</title>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js">
-		</script>
-		<script type="text/javascript" src="website.js"></script>
-		<script>
+<head>
+	<title>Connor Rowland | Web Developer</title>
+	<!-- Meta Tags -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="Web Development and Graphic Design portfolio website.">
+	<meta name="author" content="Connor Rowland">
+	<!-- Scripts and Links -->
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js">
+	</script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
+	<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -13,39 +19,37 @@
 
 		  ga('create', 'UA-67845188-1', 'auto');
 		  ga('send', 'pageview');
-		</script>
-		<link rel="stylesheet" type="text/css" href="style.css">
-		<link rel="shortcut icon" href="./otherPhotos/favicon1.ico"/>
-	</head>
-	<body>
-		<header>
-			<div id="hamburgerIcon">
-		      <div></div>
-		      <div></div>
-		      <div></div>
-		    </div>
-			<h2>Contact Me</h2>
-		</header>
-	    <nav>
-	      <p id="xOut">X</p>
-	      <a href="index.html">Home</a><br><br>
-	      <a href="about.html">About</a><br><br>
-	      <a href="webDev.html">Web Development</a><br><br>
-	      <a href="design.html">Design</a><br><br>
-	      <a href="./pdfs/resume09292015.pdf">Resume</a><br><br>
-	      <a href="contact.html">Contact</a><br><br>
-	    </nav> 
-			<div id="colorBox">
-				<img src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="envelope"/>
-				<div id="contactTextBox">
-					<h2>Say Hi!</h2>
-					<p>Or other things.</p>
-					<button><a href="mailto:cjr6734@yahoo.com">Email Me</a></button>
-				</div>
-				<div id="contactTextBox2">
-					<a href="https://github.com/connorrowland" target="_blank">Github</a>
-					<a href="https://www.linkedin.com/in/connorrowland" target="_blank">Linkedin</a>
-				</div>
-			</div>
-	</body>
+
+	</script>
+	<link rel="shortcut icon" href="./otherPhotos/favicon1.ico"/>
+	<link rel="stylesheet" type="text/css" href="website.css">
+</head>
+<body>
+	<nav id="nav_bar">
+		<a href="index.html">Home</a>
+		<a href="portfolio.html">Portfolio</a>
+		<a href="imgs/resume.pdf">Resume</a>
+		<a href="contact.html">Contact</a>
+	</nav>
+	<div id="contactTextBox">
+		<img src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
+		<h1>Say Hi!</h1>
+		<h2>Or other things.</h2>
+		<button><a href="mailto:cjr6734@yahoo.com">Email Me</a></button>
+	</div>
+	<footer>
+		<nav id="footer_nav_bar">
+			<a href="index.html">Home</a>
+			<a href="portfolio.html">Portfolio</a>
+			<a href="imgs/resume.pdf">Resume</a>
+			<a href="contact.html">Contact</a>
+		</nav>
+		<div id="footer_links">
+			<a href="mailto:cjr6734@yahoo.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
+			<a href="https://github.com/connorrowland"><img src="http://i.imgur.com/z0VVNbs.png?1" alt="Github"></a>
+			<a href="https://www.linkedin.com/in/connorrowland"><img src="http://i.imgur.com/BYqAuxN.png?1" alt="LinkedIn"></a>
+		</div>
+		<p id="footer_text">Connor Rowland<br>New York, NY<br>Cjr6734@yahoo.com<br>(845)548-2033</p>
+	</footer>
+</body>
 </html>
