--- a/ellevest.html
+++ b/ellevest.html
@@ -31,27 +31,20 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a href="contact.html">Contact</a>
 	</nav>
-	<div class="lander_container">
-		<div class="text_and_photo_container">
-			<img id="icon_of_me"src="http://i.imgur.com/dVg6YIY.png?1" alt="icon of me.">
-			<div class="lander_text">
-				<h1 id="lander_greeting1">HELLO!</h1>
-				<h2 id="lander_greeting2">I'm Connor, a Web Developer and Graphic Designer</h2>
-			</div>	
-		</div>
+	<div id="porfolio_container">
+		<h1>Ellevest</h1>
+		<h2 id="project_description_text">Beginning in the Fall of 2015, I began doing freelance work for Ellevest. Ellevest is an investing platform designed specifically for women. In my time there, I constructed a "Sign Up" page for their Beta release, where I used Ruby on Rails, React.Js, and SASS.</h2>
+		<img class="larger_project_image" src="imgs/Ellevest1.png" alt="ellevest" />
+		<img class="larger_project_image" src="imgs/Ellevest2.jpg" alt="ellevest" />
+		<img class="larger_project_image" src="imgs/Ellevest3.png" alt="ellevest" />
+		<img class="larger_project_image" src="imgs/Ellevest4.jpg" alt="ellevest" />
+		<img class="larger_project_image" src="imgs/Ellevest5.png" alt="ellevest" />
+		<img class="larger_project_image" src="imgs/Ellevest6.jpg" alt="ellevest" />
+		<img class="larger_project_image" src="imgs/Ellevest7.png" alt="ellevest" />
+		<img class="larger_project_image" src="imgs/Ellevest8.jpg" alt="ellevest" />
 	</div>
-	<div class="second_lander_section">
-		<p id="second_lander_paragraph">I love building applications and taking part in work where I can blend meaningful design with well-written code. I also love dogs. I don’t love cilantro. Or comic sans. Thanks for stopping by!</p>
-	</div>
-	<div class="third_lander_section">
-		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I designed this!" alt="Flat Cartoon of New York"/>
-		<p>I also love making cartoons</p>
-		<img src="http://i.imgur.com/L18lNqk.png?1" title="I designed this!" alt="Flat cartoon of tools">
-		<h3 id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens just a bit less, as I integrate design and code to showcase an idea to its fullest ability.</h3>
-		<div class="horizontal_divider_line"></div>
-		<p id="closing_landing_statment">Take a look throughout my site to discover more about my work.</p>
-		<div class="horizontal_divider_line"></div>
-	</div>
+
+
 	<footer>
 		<nav id="footer_nav_bar">
 			<a href="index.html">Home</a>
