--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,7 @@
 	</script>
 	<link rel="shortcut icon" href="./otherPhotos/favicon1.ico"/>
 	<link rel="stylesheet" type="text/css" href="website.css">
+	<link href='https://fonts.googleapis.com/css?family=Lato:400,700|Libre+Baskerville:400italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<nav id="nav_bar">
