--- a/magazines.html
+++ b/magazines.html
@@ -33,16 +33,13 @@
 		<a href="contact.html">Contact</a>
 	</nav>
 	<div id="porfolio_container">
-		<h1 id="project_name_text">Ellevest</h1>
-		<p id="project_description_text">Beginning in the Fall of 2015, I began doing freelance work for Ellevest. Ellevest is an investing platform designed specifically for women. In my time there, I constructed a "Sign Up" page for their Beta release, where I used Ruby on Rails, React.Js, and SASS.</p>
-		<img class="larger_project_image" src="imgs/Ellevest1.png" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest2.jpg" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest3.png" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest4.jpg" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest5.png" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest6.jpg" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest7.png" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest8.jpg" alt="ellevest" />
+		<h1 id="long_project_name_text">Magazine Layouts</h1>
+		<p id="project_description_text">Below are projects that I've completed in Graphic Design courses that I've enrolled in dealing with magazine spreads and layouts.</p>
+		<img class="larger_project_image" src="imgs/mag1.png" alt="Magazine Layout" />
+		<img class="larger_project_image" src="imgs/mag2.png" alt="Magazine Layout" />
+		<img class="larger_project_image" src="imgs/mag3.png" alt="Magazine Layout" />
+		<img class="larger_project_image" src="imgs/mag4.png" alt="Magazine Layout" />
+		<img class="larger_project_image" src="imgs/mag5.png" alt="Magazine Layout" />
 	</div>
 
 
