--- a/portfolio.html
+++ b/portfolio.html
@@ -35,12 +35,14 @@
 	<div id="porfolio_container">
 		<h2>Development Work:</h2>
 		<div class="preview_image_container">
-			<a href="ellevest.html"><img class="preview_image" src="imgs/Ellevest1.png" alt="ellevest" /></a>
-			<a href="letsmeet.html"><img class="preview_image" src="imgs/Letsmeet1.png" alt="ellevest" /></a>
+			<a href="ellevest.html"><img class="preview_image" src="imgs/ellevest-preview-website.png" alt="Ellevest Project Preview" /></a>
+			<a href="letsmeet.html"><img class="preview_image" src="imgs/letsmeet-preview-website.png" alt="Lets Meet Preview" /></a>
 		</div>
-		<!-- <h2>Design Work:</h2>
+		<h2>Design Work:</h2>
 		<div class="preview_image_container">
-			<img class="preview_image" src="imgs/ellevest1.jpg" alt="ellevest" /> -->
+			<a href="trilogy.html"><img class="preview_image" src="imgs/git-preview-website.png" alt="Git Project Preview"/></a>
+			<a href="baruch.html"><img class="preview_image" src="imgs/baruch-preview-website-03.png" alt="Baruch Project Preview"/></a>
+			<a href="magazines.html"><img class="preview_image" src="imgs/magazine-preview-website-04.png" alt="Magazine Project Preview"/></a>
 		</div>
 	</div>
 
