--- a/trilogy.html
+++ b/trilogy.html
@@ -33,16 +33,14 @@
 		<a href="contact.html">Contact</a>
 	</nav>
 	<div id="porfolio_container">
-		<h1 id="project_name_text">Ellevest</h1>
-		<p id="project_description_text">Beginning in the Fall of 2015, I began doing freelance work for Ellevest. Ellevest is an investing platform designed specifically for women. In my time there, I constructed a "Sign Up" page for their Beta release, where I used Ruby on Rails, React.Js, and SASS.</p>
-		<img class="larger_project_image" src="imgs/Ellevest1.png" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest2.jpg" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest3.png" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest4.jpg" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest5.png" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest6.jpg" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest7.png" alt="ellevest" />
-		<img class="larger_project_image" src="imgs/Ellevest8.jpg" alt="ellevest" />
+		<h1 id="long_project_name_text">Trilogy Educational Services</h1>
+		<p id="project_description_text">For a freelance project with Trilogy Educational Services, I was instructed to make graphics to explain various Git processes. Below are the graphics that I made, which are now used as learning materials for a coding bootcamp.</p>
+		<img class="larger_project_image" src="imgs/gitfreelanceproj1.png" alt="Git Graphic" />
+		<img class="larger_project_image" src="imgs/gitfreelanceproj2.png" alt="Git Graphic" />
+		<img class="larger_project_image" src="imgs/gitfreelanceproj3.png" alt="Git Graphic" />
+		<img class="larger_project_image" src="imgs/gitfreelanceproj4.png" alt="Git Graphic" />
+		<img class="larger_project_image" src="imgs/gitfreelanceproj5.png" alt="Git Graphic" />
+		<img class="larger_project_image" src="imgs/gitfreelanceproj6.png" alt="Git Graphic" />
 	</div>
 
 
