adding to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,6 +43,7 @@
 			<a href="trilogy.html"><img class="preview_image" src="imgs/git-preview-website.png" alt="Git Project Preview"/></a>
 			<a href="baruch.html"><img class="preview_image" src="imgs/baruch-preview-website-03.png" alt="Baruch Project Preview"/></a>
 			<a href="magazines.html"><img class="preview_image" src="imgs/magazine-preview-website-04.png" alt="Magazine Project Preview"/></a>
+			<a href="pride.html"><img class="preview_image" src="imgs/pride-preview-website.png" alt="Pride Project Preview"/></a>
 		</div>
 	</div>
 
