--- a/pride.html
+++ b/pride.html
@@ -33,9 +33,10 @@
 		<a href="contact.html">Contact</a>
 	</nav>
 	<div id="porfolio_container">
-		<h1 id="project_name_text">Baruch College Play</h1>
-		<p id="project_description_text">For my Graphic Design class focusing on Typography, we were assigned to create a poster design for the school play, Tennessee Williams's <i>Suddenly Last Summer</i>.</p>
-		<img class="larger_project_image" src="imgs/suddenly-last-sm.png" alt="Suddenly Last Summer Poster" />
+		<h1 id="long_project_name_text">Pride March T-Shirt</h1>
+		<p id="project_description_text">A T-Shirt design for the 2015 NYC Pride March.</p>
+		<img class="larger_project_image" src="imgs/pride1.jpg" alt="Pride T-Shirt" />
+		<img class="larger_project_image" src="imgs/pride2.png" alt="Pride T-Shirt" />
 	</div>
 
 
