--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I designed this!" alt="Flat Cartoon of New York"/>
 		<p>I also love making cartoons</p>
 		<img src="http://i.imgur.com/L18lNqk.png?1" title="I designed this!" alt="Flat cartoon of tools">
-		<h3 id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens just a bit less, as I integrate design and code to showcase an idea to its fullest ability.</h3>
+		<p id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens just a bit less, as I integrate design and code to showcase an idea to its fullest ability.</p>
 		<div class="horizontal_divider_line"></div>
 		<p id="closing_landing_statment">Take a look throughout my site to discover more about my work.</p>
 		<div class="horizontal_divider_line"></div>
