--- a/blog.html
+++ b/blog.html
@@ -29,23 +29,12 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a href="contact.html">Contact</a>
 	</nav>
-	<div class="lander_container">
-		<div class="text_and_photo_container">
-			<img id="icon_of_me"src="http://i.imgur.com/dVg6YIY.png?1" alt="icon of me.">
-			<div class="lander_text">
-				<h1 id="lander_greeting1">HELLO!</h1>
-				<h2 id="lander_greeting2">I'm Connor, a Web Developer and Graphic Designer</h2>
-			</div>	
-		</div>
+	<div id="porfolio_container">
+		<h1 id="long_project_name_text">My Blog.</h1>
+		<p id="project_description_text">Take a look through my posts to gain a better understanding of who I am, and also of my perspective on work in design and engineering.</p>
 	</div>
-	<div class="second_lander_section">
-		<p id="second_lander_paragraph">I love building applications and taking part in work where I can blend meaningful design with well-written code. I also love dogs. I don’t love cilantro. Or comic sans. Thanks for stopping by!</p>
-	</div>
-	<div class="third_lander_section">
-		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I designed this!" alt="Flat Cartoon of New York"/>
-		<p>I also love making cartoons</p>
-		<img src="http://i.imgur.com/L18lNqk.png?1" title="I designed this!" alt="Flat cartoon of tools">
-		<p id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens just a bit less, as I integrate design and code to showcase an idea to its fullest ability.<br><br>Take a look throughout my site to discover more about my work.</p>
+	<div class="preview_image_container">
+		
 	</div>
 	<footer>
 		<nav id="footer_nav_bar">
