Changes made to index, new portfolio piece added

--- a/flat-design.html
+++ b/flat-design.html
@@ -29,22 +29,15 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a href="contact.html">Contact</a>
 	</nav>
-	<div class="lander_container">
-		<div class="text_and_photo_container">
-			<img id="icon_of_me"src="http://i.imgur.com/dVg6YIY.png?1" alt="icon of me.">
-			<div class="lander_text">
-				<h1 id="lander_greeting1">HELLO!</h1>
-				<h2 id="lander_greeting2">I'm Connor, a Web Developer and Graphic Designer</h2>
-			</div>	
-		</div>
+	<div id="porfolio_container">
+		<h1 id="project_name_text">Flat Design</h1>
+		<p id="project_description_text">A series of different icons and illustrations informed by the techniques of flat design.</p>
+		<img class="larger_project_image" src="imgs/hammer-design-flat.png" alt="Flat Cartoon of Tools." />
+		<img class="larger_project_image" src="imgs/responsive-cartoon.png" alt="Flat Cartoon of Iphone/Ipad." />
+		<img class="larger_project_image" src="imgs/flat-mountain.png" alt="Flat Mountain." />
 	</div>
-	<div class="second_lander_section">
-		<p id="second_lander_paragraph">I love building applications and taking part in work where I can blend meaningful design with well-written code. I also love dogs. I don’t love cilantro. Or comic sans. Thanks for stopping by!</p>
-	</div>
-	<div class="third_lander_section">
-		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I designed this!" alt="Flat Cartoon of New York"/>
-		<p id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens just a bit less, as I integrate design and code to showcase an idea to its fullest ability.<br><br>Take a look throughout my site to discover more about my work.</p>
-	</div>
+
+
 	<footer>
 		<nav id="footer_nav_bar">
 			<a href="index.html">Home</a>
