--- a/portfolio.html
+++ b/portfolio.html
@@ -41,6 +41,7 @@
 			<a href="baruch.html"><img class="preview_image" src="imgs/baruch-preview-website-03.png" alt="Baruch Project Preview"/></a>
 			<a href="magazines.html"><img class="preview_image" src="imgs/magazine-preview-website-04.png" alt="Magazine Project Preview"/></a>
 			<a href="pride.html"><img class="preview_image" src="imgs/pride-preview-website.png" alt="Pride Project Preview"/></a>
+			<a href="flat-design.html"><img class="preview_image" src="imgs/flat-preview-website.png" alt="Flat Design Preview"/></a>
 		</div>
 	</div>
 
