--- a/blog.html
+++ b/blog.html
@@ -29,12 +29,22 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a href="contact.html">Contact</a>
 	</nav>
-	<div id="porfolio_container">
-		<h1 id="long_project_name_text">My Blog.</h1>
-		<p id="project_description_text">Take a look through my posts to gain a better understanding of who I am, and also of my perspective on work in design and engineering.</p>
+	<div class="blog_fun_background_container">
+		<div class="fun_blog_text_container">
+			<img src="imgs/blog-lander-image.png" alt="">
+		</div>
 	</div>
-	<div class="preview_image_container">
-		
+	<div id="porfolio_container">
+		<h1 id="long_project_name_text">Welcome to M'Website!</h1>
+		<h2>I'm Connor, a Web Engineer and Graphic Designer.</h2>
+		<img id="icon_of_me"src="http://i.imgur.com/dVg6YIY.png?1" alt="icon of me.">
+		<p>This is a cartoon I made of myself. I do have eyes and other facial features IRL.</p>
+		<div class="fiddy_spacer"></div>
+		<div class="light_gray_divider_line"></div>
+		<div class="fiddy_spacer"></div>
+		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I designed this!" alt="Flat Cartoon of New York"/>
+		<p id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens just a bit less, as I integrate design and code to showcase an idea to its fullest ability. I'm now realizing this caption has litte to nothing to do with the above cartoon, but it looks nice and I like it!<br><br>Check out my portfolio and resume to get a better guage of my presence in design and engineering.</p>
+		<!-- <p id="project_description_text">Take a look through my posts to gain a better understanding of who I am, and also of my perspective on work in design and engineering.</p> -->
 	</div>
 	<footer>
 		<nav id="footer_nav_bar">
