--- a/magazines.html
+++ b/magazines.html
@@ -32,11 +32,17 @@
 	<div id="porfolio_container">
 		<h1 id="long_project_name_text">Magazine Layouts</h1>
 		<p id="project_description_text">Below are projects that I've completed in Graphic Design courses that I've enrolled in dealing with magazine spreads and layouts.</p>
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/mag1.png" alt="Magazine Layout" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/mag2.png" alt="Magazine Layout" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/mag3.png" alt="Magazine Layout" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/mag4.png" alt="Magazine Layout" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/mag5.png" alt="Magazine Layout" />
+		<div class="fifty_spacer"></div>
 	</div>
 
 
