--- a/pride.html
+++ b/pride.html
@@ -32,8 +32,11 @@
 	<div id="porfolio_container">
 		<h1 id="long_project_name_text">Pride March T-Shirt</h1>
 		<p id="project_description_text">A T-Shirt design for the 2015 NYC Pride March.</p>
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/pride1.jpg" alt="Pride T-Shirt" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/pride2.png" alt="Pride T-Shirt" />
+		<div class="fifty_spacer"></div>
 	</div>
 
 
