--- a/trilogy.html
+++ b/trilogy.html
@@ -35,12 +35,19 @@
 	<div id="porfolio_container">
 		<h1 id="long_project_name_text">Trilogy Educational Services</h1>
 		<p id="project_description_text">For a freelance project with Trilogy Educational Services, I was instructed to make graphics to explain various Git processes. Below are the graphics that I made, which are now used as learning materials for a coding bootcamp.</p>
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/gitfreelanceproj1.png" alt="Git Graphic" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/gitfreelanceproj2.png" alt="Git Graphic" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/gitfreelanceproj3.png" alt="Git Graphic" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/gitfreelanceproj4.png" alt="Git Graphic" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/gitfreelanceproj5.png" alt="Git Graphic" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/gitfreelanceproj6.png" alt="Git Graphic" />
+		<div class="fifty_spacer"></div>
 	</div>
 
 
