--- a/ellevest.html
+++ b/ellevest.html
@@ -32,14 +32,23 @@
 	<div id="porfolio_container">
 		<h1 id="project_name_text">Ellevest</h1>
 		<p id="project_description_text">Beginning in the Fall of 2015, I began doing freelance work for Ellevest. Ellevest is an investing platform designed specifically for women. In my time there, I constructed a "Sign Up" page for their Beta release, where I used Ruby on Rails, React.Js, and SASS.</p>
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/Ellevest1.png" alt="ellevest" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/Ellevest2.jpg" alt="ellevest" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/Ellevest3.png" alt="ellevest" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/Ellevest4.jpg" alt="ellevest" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/Ellevest5.png" alt="ellevest" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/Ellevest6.jpg" alt="ellevest" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/Ellevest7.png" alt="ellevest" />
+		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/Ellevest8.jpg" alt="ellevest" />
+		<div class="fifty_spacer"></div>
 	</div>
 
 
