--- a/letsmeet.html
+++ b/letsmeet.html
@@ -33,10 +33,23 @@
 		<h1 id="project_name_text">Let's Meet!</h1>
 		<p id="project_description_text">In the Summer of 2015, me and two others created Let's Meet, an application for finding a central meeting place between two locations. We constructed Let's meet using Backbone.Js, Ruby on Rails, JQuery, Handlebars, and the API of both Yelp and Google Maps.<br><br><a id="project_link"href="https://letsmeethalfway.herokuapp.com/">Link To Site</a></p>
 
-		<a href="https://letsmeethalfway.herokuapp.com/"><img class="larger_project_image" src="imgs/Letsmeet1.png" alt="Let's Meet Screenshot" /></a>
-		<a href="https://letsmeethalfway.herokuapp.com/"><img class="larger_project_image" src="imgs/Letsmeet2.png" alt="Let's Meet Screenshot" /></a>
-		<a href="https://letsmeethalfway.herokuapp.com/"><img class="larger_project_image" src="imgs/Letsmeet3.png" alt="Let's Meet Screenshot" /></a>
-		<a href="https://letsmeethalfway.herokuapp.com/"><img class="larger_project_image" src="imgs/Letsmeet4.png" alt="Let's Meet Screenshot" /></a>
+		<div class="fifty_spacer"></div>
+
+		<a href="https://letsmeethalfway.herokuapp.com/" target="_blank"><img class="larger_project_image" src="imgs/Letsmeet1.png" alt="Let's Meet Screenshot" /></a>
+
+		<div class="fifty_spacer"></div>
+
+		<a href="https://letsmeethalfway.herokuapp.com/" target="_blank"><img class="larger_project_image" src="imgs/Letsmeet2.png" alt="Let's Meet Screenshot" /></a>
+
+		<div class="fifty_spacer"></div>
+
+		<a href="https://letsmeethalfway.herokuapp.com/" target="_blank"><img class="larger_project_image" src="imgs/Letsmeet3.png" alt="Let's Meet Screenshot" /></a>
+
+		<div class="fifty_spacer"></div>
+
+		<a href="https://letsmeethalfway.herokuapp.com/" target="_blank"><img class="larger_project_image" src="imgs/Letsmeet4.png" alt="Let's Meet Screenshot" /></a>
+
+		<div class="fifty_spacer"></div>
 
 	</div>
 
