--- a/responsive.html
+++ b/responsive.html
@@ -29,15 +29,20 @@
 		<a href="imgs/resume.pdf">Resume</a>
 		<a href="contact.html">Contact</a>
 	</nav>
-	<div id="porfolio_container">
-		<h1 id="project_name_text">Baruch College Play</h1>
-		<p id="project_description_text">For my Graphic Design class focusing on Typography, we were assigned to create a poster design for the school play, Tennessee Williams's <i>Suddenly Last Summer</i>.</p>
-		<div class="fifty_spacer"></div>
-		<img class="larger_project_image" src="imgs/suddenly-last-sm.png" alt="Suddenly Last Summer Poster" />
-		<div class="fifty_spacer"></div>
+	<div class="iphone_shell">
+		<div class="iphone_screen_container">
+			<div class="camera_speaker_container">
+				<div class="camera"></div>
+				<div class="speaker"></div>
+			</div>
+
+			<div class="iphone_screen">
+				
+			</div>
+
+			<div class="home_button"></div>
+		</div>
 	</div>
-
-
 	<footer>
 		<nav id="footer_nav_bar">
 			<a href="index.html">Home</a>
