--- a/responsive.html
+++ b/responsive.html
@@ -18,6 +18,8 @@
 		  ga('send', 'pageview');
 
 	</script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+	<script src="app.js"></script>
 	<link rel="shortcut icon" href="./otherPhotos/favicon1.ico"/>
 	<link rel="stylesheet" type="text/css" href="website.css">
 	<link href='https://fonts.googleapis.com/css?family=Lato:400,700|Libre+Baskerville:400italic' rel='stylesheet' type='text/css'>
@@ -36,9 +38,20 @@
 				<div class="speaker"></div>
 			</div>
 
-			<div class="iphone_screen">
-				
+			<div class="off_iphone_screen">	
 			</div>
+			<div class="on_iphone_screen">
+				<div class="iphone_header">
+					<p>5:12 PM</p>
+				</div>
+				<div class="iphone_bottom_app_bar">
+					<div class="app"></div>
+					<div class="app"></div>
+					<div class="app"></div>
+					<div class="app"></div>
+				</div>
+			</div>
+
 
 			<div class="home_button"></div>
 		</div>
