fixing target for footer links. now blank

--- a/pride.html
+++ b/pride.html
@@ -49,8 +49,8 @@
 		</nav>
 		<div id="footer_links">
 			<a href="mailto:cjr6734@yahoo.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
-			<a href="https://github.com/connorrowland"><img src="http://i.imgur.com/z0VVNbs.png?1" alt="Github"></a>
-			<a href="https://www.linkedin.com/in/connorrowland"><img src="http://i.imgur.com/BYqAuxN.png?1" alt="LinkedIn"></a>
+			<a target="_blank" href="https://github.com/connorrowland"><img src="http://i.imgur.com/z0VVNbs.png?1" alt="Github"></a>
+			<a target="_blank" href="https://www.linkedin.com/in/connorrowland"><img src="http://i.imgur.com/BYqAuxN.png?1" alt="LinkedIn"></a>
 		</div>
 		<p id="footer_text">Connor Rowland<br>New York, NY<br>Cjr6734@yahoo.com<br>(845)548-2033</p>
 	</footer>
