--- a/iphone.html
+++ b/iphone.html
@@ -29,7 +29,7 @@
 		<a href="index.html">Home</a>
 		<a href="portfolio.html">Portfolio</a>
 		<a href="imgs/resume.pdf">Resume</a>
-		<a href="contact.html">Contact</a>
+		<a id="contact_link">Contact</a>
 	</nav>
 	<div id="porfolio_container">
 		<h1 id="long_project_name_text">iPhone Reproduction</h1>
@@ -49,13 +49,13 @@
 				<div class="iphone_header">
 					<p>5:12 PM</p>
 				</div>
-				<!-- <div class="iphone_bottom_app_bar">
-					<div class="app"></div>
-					<div class="app"></div>
-					<div class="app"></div>
-					<div class="app"></div>
-				</div> -->
+				<div class="iphone_bottom_app_bar">
+					<!-- <div id="personal_site_app">
+						<h1>C</h1>
+					</div> -->
+				</div>
 			</div>
+			<!-- <iframe id="personal_site_frame"src="http://www.connorrowland.com" width="390px" height="600px" frameborder="0"></iframe> -->
 			<div class="home_button"></div>
 		</div>
 	</div>
@@ -63,18 +63,25 @@
 
 
 	<footer>
-		<nav id="footer_nav_bar">
-			<a href="index.html">Home</a>
-			<a href="portfolio.html">Portfolio</a>
-			<a href="imgs/resume.pdf">Resume</a>
-			<a href="contact.html">Contact</a>
-		</nav>
-		<div id="footer_links">
-			<a href="mailto:cjr6734@yahoo.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
-			<a target="_blank" href="https://github.com/connorrowland"><img src="http://i.imgur.com/z0VVNbs.png?1" alt="Github"></a>
-			<a target="_blank" href="https://www.linkedin.com/in/connorrowland"><img src="http://i.imgur.com/BYqAuxN.png?1" alt="LinkedIn"></a>
+		<div id="footer_contact_box">
+			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
+			<h1>Say Hi!</h1>
+			<h2>Or other things.</h2>
+			<button id="email_me_button"><a href="mailto:cjr6734@yahoo.com">Email Me!</a></button>
 		</div>
-		<p id="footer_text">Connor Rowland<br>New York, NY<br>Cjr6734@yahoo.com<br>(845)548-2033</p>
+		<div id="footer_lower_box">
+			<nav id="footer_nav_bar">
+				<a href="index.html">Home</a>
+				<a href="portfolio.html">Portfolio</a>
+				<a href="imgs/resume.pdf">Resume</a>
+			</nav>
+			<div id="footer_links">
+				<a href="mailto:cjr6734@yahoo.com"><img src="http://i.imgur.com/TbL4up7.png?1" alt="Email Me"></a>
+				<a target="_blank" href="https://github.com/connorrowland"><img src="http://i.imgur.com/z0VVNbs.png?1" alt="Github"></a>
+				<a target="_blank" href="https://www.linkedin.com/in/connorrowland"><img src="http://i.imgur.com/BYqAuxN.png?1" alt="LinkedIn"></a>
+			</div>
+			<p id="footer_text">Connor Rowland<br>New York, NY<br>Cjr6734@yahoo.com<br>(845)548-2033</p>
+		</div>
 	</footer>
 </body>
 </html>
