changing background on lander section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</div>
 	</div>
 	<div class="second_lander_section">
-		<p id="second_lander_paragraph">I love building applications and taking part in work where I can blend meaningful design with well-written code to build great things. Thanks for stopping by!</p>
+		<p id="second_lander_paragraph">I love taking part in work where I can blend meaningful design with well-written code to build great things. Thanks for stopping by!</p>
 	</div>
 	<div class="third_lander_section">
 		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I designed this!" alt="Flat Cartoon of New York"/>
