a tag fix on lets meet

--- a/letsmeet.html
+++ b/letsmeet.html
@@ -33,7 +33,7 @@
 	</nav>
 	<div id="porfolio_container">
 		<h1 id="project_name_text">Let's Meet!</h1>
-		<p id="project_description_text">In the Summer of 2015 two others and I created Let's Meet, an application for finding a central meeting place between two locations. Once Let's Meet finds that location, it provides the user with activity suggestions based on Yelp reviews. We constructed Let's meet using Backbone.Js, Ruby on Rails, JQuery, Handlebars, and the API of both Yelp and Google Maps.<br><br><a id="project_link"href="https://letsmeethalfway.herokuapp.com/">Link To Site</a></p>
+		<p id="project_description_text">In the Summer of 2015 two others and I created Let's Meet, an application for finding a central meeting place between two locations. Once Let's Meet finds that location, it provides the user with activity suggestions based on Yelp reviews. We constructed Let's meet using Backbone.Js, Ruby on Rails, JQuery, Handlebars, and the API of both Yelp and Google Maps.<br><br><a class="underline_link" target="_blank" href="https://letsmeethalfway.herokuapp.com/">Link To Site</a></p>
 
 		<div class="fifty_spacer"></div>
 
