adding in next project button and new lets meet page

--- a/ellevest.html
+++ b/ellevest.html
@@ -63,7 +63,7 @@
 				</div>
 
 				<div class="portfolio_text_box align_left">
-					<p class="italic_lato">What I Did</p>
+					<p class="italic_lato top_of_container_text">What I Did</p>
 					<p>
 						My work at Ellevest began with the build of their Beta release “Sign Up” page. As my work for Ellevest continued, I constructed HTML E-mails, in addition to integrating various articles for Ellevest’s “Resource Center.”
 					</p>
@@ -99,9 +99,13 @@
 		<img class="larger_project_image" src="imgs/Ellevest7.png" alt="ellevest" />
 		<div class="fifty_spacer"></div>
 		<div class="fifty_spacer"></div>
+
+		<div class="next_project_container">
+			<a href="letsmeet.html" class="next_project_link"><strong>Next Project</strong>: Let's Meet</a>
+		</div>
 	</div>
 
-
+	
 	<footer>
 		<div id="footer_contact_box">
 			<img id="footer_envelope" src="http://i.imgur.com/d5mN9lB.png?2" title="I designed this!" alt="Flat Envelope"/>
