--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<p id="second_lander_paragraph">I love taking part in work where I can blend meaningful design with well-written code to build great things. Thanks for stopping by!</p>
 	</div>
 	<div class="third_lander_section">
-		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I designed this!" alt="Flat Cartoon of New York"/>
+		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I made dis" alt="Flat Cartoon of New York"/>
 		<p id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens just a bit less, as I integrate design and code to showcase an idea to its fullest ability.<br><br>Take a look throughout my site to discover more about my work.</p>
 	</div>
 	<footer>
