--- a/iphone.html
+++ b/iphone.html
@@ -37,28 +37,32 @@
 		<div class="fifty_spacer"></div>
 
 		<div class="iphone_shell">
-		<div class="iphone_screen_container">
-			<div class="camera_speaker_container">
-				<div class="camera"></div>
-				<div class="speaker"></div>
-			</div>
+			<div class="iphone_screen_container">
+				<div class="camera_speaker_container">
+					<div class="camera"></div>
+					<div class="speaker"></div>
+				</div>
 
-			<div class="off_iphone_screen">	
-			</div>
-			<div class="on_iphone_screen">
-				<div class="iphone_header">
-					<p>5:12 PM</p>
+				<div class="off_iphone_screen">	
 				</div>
-				<div class="iphone_bottom_app_bar">
-					<!-- <div id="personal_site_app">
-						<h1>C</h1>
-					</div> -->
+				<div class="on_iphone_screen">
+					<div class="iphone_header">
+						<p>5:12 PM</p>
+					</div>
+					<div class="iphone_bottom_app_bar">
+						<!-- <div id="personal_site_app">
+							<h1>C</h1>
+						</div> -->
+					</div>
 				</div>
+				<!-- <iframe id="personal_site_frame"src="http://www.connorrowland.com" width="390px" height="600px" frameborder="0"></iframe> -->
+				<div class="home_button"></div>
 			</div>
-			<!-- <iframe id="personal_site_frame"src="http://www.connorrowland.com" width="390px" height="600px" frameborder="0"></iframe> -->
-			<div class="home_button"></div>
 		</div>
-	</div>
+		<div class="fifty_spacer"></div>
+		<div class="next_project_container">
+			<a href="ellevest.html" class="next_project_link"><strong>Next Project</strong>: Ellevest</a>
+		</div>
 	</div>
 
 
