--- a/magazines.html
+++ b/magazines.html
@@ -45,6 +45,10 @@
 		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/mag5.png" alt="Magazine Layout" />
 		<div class="fifty_spacer"></div>
+
+		<div class="next_project_container">
+			<a href="pride.html" class="next_project_link"><strong>Next Project</strong>: Pride T-Shirt</a>
+		</div>
 	</div>
 
 
