--- a/trilogy.html
+++ b/trilogy.html
@@ -50,6 +50,10 @@
 		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/gitfreelanceproj6.png" alt="Git Graphic" />
 		<div class="fifty_spacer"></div>
+
+		<div class="next_project_container">
+			<a href="baruch.html" class="next_project_link"><strong>Next Project</strong>: Baruch College Play</a>
+		</div>
 	</div>
 
 
