--- a/baruch.html
+++ b/baruch.html
@@ -37,6 +37,10 @@
 		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/suddenly-last-sm.png" alt="Suddenly Last Summer Poster" />
 		<div class="fifty_spacer"></div>
+
+		<div class="next_project_container">
+			<a href="magazines.html" class="next_project_link"><strong>Next Project</strong>: Magazine Layouts</a>
+		</div>
 	</div>
 
 	<footer>
