--- a/pride.html
+++ b/pride.html
@@ -39,6 +39,10 @@
 		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/pride2.png" alt="Pride T-Shirt" />
 		<div class="fifty_spacer"></div>
+
+		<div class="next_project_container">
+			<a href="iphone.html" class="next_project_link"><strong>Next Project</strong>: iPhone Reproduction</a>
+		</div>
 	</div>
 
 
