--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 	</div>
 	<div class="third_lander_section">
 		<img src="http://i.imgur.com/eg6YKkM.png?1" title="I made dis" alt="Flat Cartoon of New York"/>
-		<p id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens just a bit less, as I integrate design and code to showcase an idea to its fullest ability.<br><br>Take a look throughout my site to discover more about my work.</p>
+		<p id="third_lander_paragraph">So many amazing application ideas executed with poor design go to waste. I hope to make sure that happens a bit less, as I integrate design with engineering to showcase an idea to its fullest ability.<br><br>Take a look throughout my site to discover more about my work.</p>
 	</div>
 	<footer>
 		<div id="footer_contact_box">
