--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<img id="icon_of_me"src="http://i.imgur.com/dVg6YIY.png?1" alt="icon of me.">
 			<div class="lander_text">
 				<h1 id="lander_greeting1">HELLO!</h1>
-				<h2 id="lander_greeting2">I'm Connor, a Web Developer and Graphic Designer</h2>
+				<h2 id="lander_greeting2">I'm Connor, a Web Engineer and Graphic Designer</h2>
 			</div>	
 		</div>
 	</div>
